fixed links not wrapping in tables

--- a/themes/sakuli/assets/scss/style.scss
+++ b/themes/sakuli/assets/scss/style.scss
@@ -124,3 +124,11 @@ a {
         color: $color-gray-dark;
     }
 }
+td {
+    word-wrap:break-word;
+}
+table {
+  width:100%;
+    table-layout:fixed;
+
+}
